# handover-toy-case-dataset-generator

./: .gitignore  README.md  __init__.py  annotation_manager.py  ascii_dataset_player.py  ascii_generator.py  config.py  config.yaml  dataset_generator.py  dataset_player.py  enums.py  exporter.py  grid_manager.py  instrument.py  main.py  pathfinding_utils.py  person.py  process_manager.py  pyproject.toml  render_manager.py  requirements.txt  scene_object.py  utils.py
configs/: config_ascii_p1_a1_o0.yaml  config_ascii_p2_a1_o0_FO75_HARD_irand.yaml  config_ascii_p2_a1_o10_FO75_HARD_irand.yaml  config_l2.yaml  config_p1_a1_o0.yaml  config_p1_a1_o0_COLORS.yaml  config_p1_a1_o0_FO50.yaml  config_p1_a1_o0_h30.yaml  config_p1_a1_o0_irand.yaml  config_p1_a1_o0_objects.yaml  config_p1_a1_o30.yaml  config_p1_a1_o30_h30.yaml  config_p2_a1_o0.yaml  config_p2_a1_o0_FO50.yaml  config_p2_a1_o0_FO50_HARD.yaml  config_p2_a1_o0_FO75_HARD.yaml  config_p2_a1_o0_FO75_HARD_irand.yaml  config_p2_a1_o0_FO75_HARD_irand_COLORS.yaml  config_p2_a2_o0.yaml  demo.yaml
